Version 8.1
===========

Moved CWnd::GetCWndPtr to ::GetCWndPtr


Version 8.0.1
==============

Bug Fix
* Updated LoadCommonControls to resolve issues with modal dialogs
  running on older operating systems.  


New Features and Enhancements
----------------------------- 
* Win32++ is now system DPI (Dots Per Inch) aware.
  The manifest for each sample has been updated to support DPI aware.
  The size of the CFrame status bar and menu elements are now adjusted to
  accommodate the system's DPI settings. 
  
  Users may wish to detect the current DPI and their GUI layout accordingly
  to support different DPIs. Refer to:
  https://msdn.microsoft.com/en-us/library/windows/desktop/dn469266%28v=vs.85%29.aspx

* CFrame now defaults to a white theme for windows 8 and above, to better match
  the color scheme of Windows 8, Windows 8.1 and Windows 10.  


Changes in detail
-----------------
Added CWinThread::GetMainWnd
Added CWinThread::SetMainWnd

Moved Dev-C++ project files to the "ProjectFiles" folder.
Moved the network samples. They are now located in:
 - NetClient
 - NetServer
 - NetSimple


Version 8.0
===========

New Features and Enhancements
----------------------------- 
* Added CArchive.
  CArchive provides a convenient means of saving and restoring an application's
  data, by streaming the data to and from a file.
  
* Added CObject
  CObject provides the Serialize virtual function which is used by CArchive. 
  Any class inherited from CObject can override Serialize to customize the
  way its data is saved in the archive. CWnd and CWinThread inherit from
  CObject. Classes created by the user can inherit from CObject as well.  
  
* Added CRegKey.
  CRegKey is a wrapper for functions used to access and modify the registry.  

* Added CTime and CTimeSpan
  CTime manages the display of date and time.
  CTimeSpan calculates the interval between times and dates.

* Added  GetCommandLineArgs
  This function provides access to the command line arguments. They are